@@ -29,6 +29,7 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static uk.gov.hmcts.ccd.definition.store.repository.SecurityClassification.PUBLIC;
 
+@SuppressWarnings("OptionalGetWithoutIsPresent")
 @ExtendWith(SpringExtension.class)
 @SpringBootTest(classes = {
     SanityCheckApplication.class,
@@ -52,14 +53,6 @@ class ShellMappingRepositoryTest {
 
     private ShellMappingEntity testShellMapping1;
     private ShellMappingEntity testShellMapping2;
-    private CaseTypeLiteEntity shellCaseTypeLite1;
-    private CaseTypeLiteEntity shellCaseTypeLite2;
-    private CaseTypeLiteEntity origCaseTypeLite1;
-    private CaseTypeLiteEntity origCaseTypeLite2;
-    private CaseFieldEntity shellCaseField1;
-    private CaseFieldEntity shellCaseField2;
-    private CaseFieldEntity origCaseField1;
-    private CaseFieldEntity origCaseField2;
 
     @BeforeEach
     void setUp() {
@@ -82,22 +75,22 @@ class ShellMappingRepositoryTest {
             jurisdiction2, fieldType2, "origField2");
 
         // Convert to CaseTypeLiteEntity
-        shellCaseTypeLite1 = CaseTypeLiteEntity.toCaseTypeLiteEntity(shellCaseType1);
-        shellCaseTypeLite2 = CaseTypeLiteEntity.toCaseTypeLiteEntity(shellCaseType2);
-        origCaseTypeLite1 = CaseTypeLiteEntity.toCaseTypeLiteEntity(origCaseType1);
-        origCaseTypeLite2 = CaseTypeLiteEntity.toCaseTypeLiteEntity(origCaseType2);
+        CaseTypeLiteEntity shellCaseTypeLite1 = CaseTypeLiteEntity.toCaseTypeLiteEntity(shellCaseType1);
+        CaseTypeLiteEntity shellCaseTypeLite2 = CaseTypeLiteEntity.toCaseTypeLiteEntity(shellCaseType2);
+        CaseTypeLiteEntity origCaseTypeLite1 = CaseTypeLiteEntity.toCaseTypeLiteEntity(origCaseType1);
+        CaseTypeLiteEntity origCaseTypeLite2 = CaseTypeLiteEntity.toCaseTypeLiteEntity(origCaseType2);
 
         // Get case fields from saved case types
-        shellCaseField1 = shellCaseType1.getCaseFields().stream()
+        CaseFieldEntity shellCaseField1 = shellCaseType1.getCaseFields().stream()
             .filter(f -> "shellField1".equals(f.getReference()))
             .findFirst().orElseThrow();
-        shellCaseField2 = shellCaseType2.getCaseFields().stream()
+        CaseFieldEntity shellCaseField2 = shellCaseType2.getCaseFields().stream()
             .filter(f -> "shellField2".equals(f.getReference()))
             .findFirst().orElseThrow();
-        origCaseField1 = origCaseType1.getCaseFields().stream()
+        CaseFieldEntity origCaseField1 = origCaseType1.getCaseFields().stream()
             .filter(f -> "origField1".equals(f.getReference()))
             .findFirst().orElseThrow();
-        origCaseField2 = origCaseType2.getCaseFields().stream()
+        CaseFieldEntity origCaseField2 = origCaseType2.getCaseFields().stream()
             .filter(f -> "origField2".equals(f.getReference()))
             .findFirst().orElseThrow();
 
@@ -216,7 +209,7 @@ class ShellMappingRepositoryTest {
         existing.setLiveTo(LocalDate.of(2025, 12, 31));
 
         // When
-        ShellMappingEntity updated = shellMappingRepository.save(existing);
+        shellMappingRepository.save(existing);
         entityManager.flush();
         entityManager.clear();
 
@@ -386,7 +379,7 @@ class ShellMappingRepositoryTest {
         // Then
         assertAll(
             () -> assertEquals(2, saved.size()),
-            () -> assertNotNull(saved.get(0).getId()),
+            () -> assertNotNull(saved.getFirst().getId()),
             () -> assertNotNull(saved.get(1).getId()),
             () -> assertEquals(4L, shellMappingRepository.count())
         );
@@ -435,6 +428,242 @@ class ShellMappingRepositoryTest {
                 .anyMatch(m -> m.getId().equals(testShellMapping1.getId()))),
             () -> assertTrue(found.stream()
                 .anyMatch(m -> m.getId().equals(testShellMapping2.getId())))
+        );
+    }
+
+    @Test
+    void shouldFindShellMappingsByOriginatingCaseTypeIdReference() {
+        // When
+        List<ShellMappingEntity> found = shellMappingRepository
+            .findByOriginatingCaseTypeIdReference("ORIG_CASE_TYPE_1");
+
+        // Then
+        assertAll(
+            () -> assertEquals(1, found.size()),
+            () -> assertEquals(testShellMapping1.getId(), found.getFirst().getId()),
+            () -> assertNotNull(found.getFirst().getOriginatingCaseTypeId()),
+            () -> assertEquals("ORIG_CASE_TYPE_1", found.getFirst().getOriginatingCaseTypeId().getReference()),
+            () -> assertNotNull(found.getFirst().getShellCaseTypeId()),
+            () -> assertEquals("SHELL_CASE_TYPE_1", found.getFirst().getShellCaseTypeId().getReference())
+        );
+    }
+
+    @Test
+    void shouldFindShellMappingsByOriginatingCaseTypeIdReferenceMultipleResults() {
+        // Given - Create another shell mapping with the same originating case type
+        // Use findCurrentVersionForReference to ensure we're using the latest version
+        JurisdictionEntity jurisdiction = testHelper.createJurisdiction("JURISDICTION_3", "Jurisdiction 3", "Desc 3");
+        FieldTypeEntity fieldType = testHelper.createType(jurisdiction);
+        CaseTypeEntity shellCaseType3 = createCaseTypeWithField("SHELL_CASE_TYPE_3", "Shell Case Type 3",
+            jurisdiction, fieldType, "shellField3");
+        CaseTypeEntity origCaseType1 = caseTypeRepository.findCurrentVersionForReference("ORIG_CASE_TYPE_1")
+            .orElseThrow();
+
+        CaseTypeLiteEntity shellCaseTypeLite3 = CaseTypeLiteEntity.toCaseTypeLiteEntity(shellCaseType3);
+        CaseTypeLiteEntity origCaseTypeLite1 = CaseTypeLiteEntity.toCaseTypeLiteEntity(origCaseType1);
+        CaseFieldEntity shellCaseField3 = shellCaseType3.getCaseFields().stream()
+            .filter(f -> "shellField3".equals(f.getReference()))
+            .findFirst().orElseThrow();
+        CaseFieldEntity origCaseField1 = origCaseType1.getCaseFields().stream()
+            .filter(f -> "origField1".equals(f.getReference()))
+            .findFirst().orElseThrow();
+
+        ShellMappingEntity testShellMapping3 = createShellMappingEntity(
+            LocalDate.of(2024, 3, 1),
+            null,
+            shellCaseTypeLite3,
+            shellCaseField3,
+            origCaseTypeLite1,
+            origCaseField1
+        );
+        saveShellMappingAndFlushSession(testShellMapping3);
+
+        // When
+        List<ShellMappingEntity> found = shellMappingRepository
+            .findByOriginatingCaseTypeIdReference("ORIG_CASE_TYPE_1");
+
+        // Then - Should return both mappings as they're both linked to the latest version
+        assertAll(
+            () -> assertEquals(2, found.size()),
+            () -> assertTrue(found.stream()
+                .anyMatch(m -> m.getId().equals(testShellMapping1.getId()))),
+            () -> assertTrue(found.stream()
+                .anyMatch(m -> m.getId().equals(testShellMapping3.getId()))),
+            () -> assertTrue(found.stream()
+                .allMatch(m -> "ORIG_CASE_TYPE_1".equals(m.getOriginatingCaseTypeId().getReference()))),
+            () -> assertTrue(found.stream()
+                .allMatch(m -> m.getOriginatingCaseTypeId().getVersion()
+                    .equals(origCaseType1.getVersion())))
+        );
+    }
+
+    @Test
+    void shouldReturnEmptyListWhenNoShellMappingsFoundForOriginatingCaseTypeId() {
+        // When
+        List<ShellMappingEntity> found = shellMappingRepository
+            .findByOriginatingCaseTypeIdReference("NON_EXISTENT_CASE_TYPE");
+
+        // Then
+        assertTrue(found.isEmpty());
+    }
+
+    @Test
+    void shouldFindShellMappingsByOriginatingCaseTypeIdReferenceCaseSensitive() {
+        // When - searching with different case
+        List<ShellMappingEntity> found = shellMappingRepository
+            .findByOriginatingCaseTypeIdReference("orig_case_type_1");
+
+        // Then - should return empty list as query is case-sensitive
+        assertTrue(found.isEmpty());
+    }
+
+    @Test
+    void shouldFindShellMappingsByOriginatingCaseTypeIdReferenceWithDifferentCaseType() {
+        // When
+        List<ShellMappingEntity> found = shellMappingRepository
+            .findByOriginatingCaseTypeIdReference("ORIG_CASE_TYPE_2");
+
+        // Then
+        assertAll(
+            () -> assertEquals(1, found.size()),
+            () -> assertEquals(testShellMapping2.getId(), found.getFirst().getId()),
+            () -> assertNotNull(found.getFirst().getOriginatingCaseTypeId()),
+            () -> assertEquals("ORIG_CASE_TYPE_2", found.getFirst().getOriginatingCaseTypeId().getReference()),
+            () -> assertNotNull(found.getFirst().getShellCaseTypeId()),
+            () -> assertEquals("SHELL_CASE_TYPE_2", found.getFirst().getShellCaseTypeId().getReference())
+        );
+    }
+
+    @Test
+    void shouldFindShellMappingsOnlyForLatestVersionOfOriginatingCaseType() {
+        // Given - Create multiple versions of the same case type
+        JurisdictionEntity jurisdiction = testHelper.createJurisdiction("JURISDICTION_VERSION_TEST",
+            "Jurisdiction Version Test", "Desc Version Test");
+        FieldTypeEntity fieldType = testHelper.createType(jurisdiction);
+
+        // Create version 1 of originating case type (use EntityManager.persist to bypass version decorator)
+        CaseTypeEntity origCaseTypeV1 = new CaseTypeEntity();
+        origCaseTypeV1.setReference("VERSIONED_CASE_TYPE");
+        origCaseTypeV1.setName("Versioned Case Type V1");
+        origCaseTypeV1.setVersion(1);
+        origCaseTypeV1.setDescription("Versioned Case Type V1");
+        origCaseTypeV1.setJurisdiction(jurisdiction);
+        origCaseTypeV1.setSecurityClassification(PUBLIC);
+        CaseFieldEntity origCaseFieldV1Entity = testHelper.buildCaseField("origFieldV1",
+            fieldType,
+            "origFieldV1",
+            false);
+        origCaseTypeV1.addCaseField(origCaseFieldV1Entity);
+        entityManager.persist(origCaseTypeV1);
+        entityManager.flush();
+        entityManager.clear();
+
+        // Create version 2 of originating case type
+        CaseTypeEntity origCaseTypeV2 = new CaseTypeEntity();
+        origCaseTypeV2.setReference("VERSIONED_CASE_TYPE");
+        origCaseTypeV2.setName("Versioned Case Type V2");
+        origCaseTypeV2.setVersion(2);
+        origCaseTypeV2.setDescription("Versioned Case Type V2");
+        origCaseTypeV2.setJurisdiction(jurisdiction);
+        origCaseTypeV2.setSecurityClassification(PUBLIC);
+        CaseFieldEntity origCaseFieldV2Entity = testHelper.buildCaseField("origFieldV2",
+            fieldType,
+            "origFieldV2",
+            false);
+        origCaseTypeV2.addCaseField(origCaseFieldV2Entity);
+        entityManager.persist(origCaseTypeV2);
+        entityManager.flush();
+        entityManager.clear();
+
+        // Create version 3 of originating case type (latest)
+        CaseTypeEntity origCaseTypeV3 = new CaseTypeEntity();
+        origCaseTypeV3.setReference("VERSIONED_CASE_TYPE");
+        origCaseTypeV3.setName("Versioned Case Type V3");
+        origCaseTypeV3.setVersion(3);
+        origCaseTypeV3.setDescription("Versioned Case Type V3");
+        origCaseTypeV3.setJurisdiction(jurisdiction);
+        origCaseTypeV3.setSecurityClassification(PUBLIC);
+        CaseFieldEntity origCaseFieldV3Entity = testHelper.buildCaseField("origFieldV3",
+            fieldType,
+            "origFieldV3",
+            false);
+        origCaseTypeV3.addCaseField(origCaseFieldV3Entity);
+        entityManager.persist(origCaseTypeV3);
+        entityManager.flush();
+        entityManager.clear();
+
+        // Create shell case type
+        CaseTypeEntity shellCaseType = createCaseTypeWithField("SHELL_VERSION_TEST",
+            "Shell Version Test", jurisdiction, fieldType, "shellField");
+
+        // Create shell mappings linked to different versions
+        final CaseTypeLiteEntity shellCaseTypeLite = CaseTypeLiteEntity.toCaseTypeLiteEntity(shellCaseType);
+        final CaseTypeLiteEntity origCaseTypeLiteV1 = CaseTypeLiteEntity.toCaseTypeLiteEntity(origCaseTypeV1);
+        final CaseTypeLiteEntity origCaseTypeLiteV2 = CaseTypeLiteEntity.toCaseTypeLiteEntity(origCaseTypeV2);
+        final CaseTypeLiteEntity origCaseTypeLiteV3 = CaseTypeLiteEntity.toCaseTypeLiteEntity(origCaseTypeV3);
+
+        // Reload entities after clear to get fresh instances
+        origCaseTypeV1 = caseTypeRepository.findById(origCaseTypeV1.getId()).orElseThrow();
+        origCaseTypeV2 = caseTypeRepository.findById(origCaseTypeV2.getId()).orElseThrow();
+        origCaseTypeV3 = caseTypeRepository.findById(origCaseTypeV3.getId()).orElseThrow();
+
+        CaseFieldEntity shellCaseField = shellCaseType.getCaseFields().stream()
+            .filter(f -> "shellField".equals(f.getReference()))
+            .findFirst().orElseThrow();
+        CaseFieldEntity origCaseFieldV1 = origCaseTypeV1.getCaseFields().stream()
+            .filter(f -> "origFieldV1".equals(f.getReference()))
+            .findFirst().orElseThrow();
+        CaseFieldEntity origCaseFieldV2 = origCaseTypeV2.getCaseFields().stream()
+            .filter(f -> "origFieldV2".equals(f.getReference()))
+            .findFirst().orElseThrow();
+        CaseFieldEntity origCaseFieldV3 = origCaseTypeV3.getCaseFields().stream()
+            .filter(f -> "origFieldV3".equals(f.getReference()))
+            .findFirst().orElseThrow();
+
+        // Create shell mapping for version 1
+        ShellMappingEntity mappingV1 = createShellMappingEntity(
+            LocalDate.of(2024, 1, 1),
+            null,
+            shellCaseTypeLite,
+            shellCaseField,
+            origCaseTypeLiteV1,
+            origCaseFieldV1
+        );
+
+        // Create shell mapping for version 2
+        ShellMappingEntity mappingV2 = createShellMappingEntity(
+            LocalDate.of(2024, 2, 1),
+            null,
+            shellCaseTypeLite,
+            shellCaseField,
+            origCaseTypeLiteV2,
+            origCaseFieldV2
+        );
+
+        // Create shell mapping for version 3 (latest)
+        ShellMappingEntity mappingV3 = createShellMappingEntity(
+            LocalDate.of(2024, 3, 1),
+            null,
+            shellCaseTypeLite,
+            shellCaseField,
+            origCaseTypeLiteV3,
+            origCaseFieldV3
+        );
+
+        saveShellMappingAndFlushSession(mappingV1, mappingV2, mappingV3);
+
+        // When - Query for shell mappings
+        List<ShellMappingEntity> found = shellMappingRepository
+            .findByOriginatingCaseTypeIdReference("VERSIONED_CASE_TYPE");
+
+        // Then - Should only return mapping for version 3 (latest)
+        assertAll(
+            () -> assertEquals(1, found.size()),
+            () -> assertEquals(mappingV3.getId(), found.getFirst().getId()),
+            () -> assertEquals(3, found.getFirst().getOriginatingCaseTypeId().getVersion()),
+            () -> assertEquals("VERSIONED_CASE_TYPE", found.getFirst().getOriginatingCaseTypeId().getReference()),
+            () -> assertTrue(found.stream().noneMatch(m -> m.getId().equals(mappingV1.getId()))),
+            () -> assertTrue(found.stream().noneMatch(m -> m.getId().equals(mappingV2.getId())))
         );
     }
 
